--- a/HelperFunctions/HelperFunctions.csproj
+++ b/HelperFunctions/HelperFunctions.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CFB11E82-12EF-444C-B387-CBBF8DD0F27F}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{B825B859-A2CB-41A5-BBF0-0C6C2C09E716}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestApp</RootNamespace>
-    <AssemblyName>TestApp</AssemblyName>
+    <RootNamespace>HelperFunctions</RootNamespace>
+    <AssemblyName>HelperFunctions</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -32,26 +30,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Abot">
-      <HintPath>..\..\ThirdParties\Abot\Abot.dll</HintPath>
+    <Reference Include="Gurock.SmartInspect, Version=3.3.5.124, Culture=neutral, PublicKeyToken=a78b0a9303ab7a7c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\ThirdParties\Gurock.SmartInspect.dll</HintPath>
     </Reference>
-    <Reference Include="AutoMapper">
-      <HintPath>..\..\ThirdParties\Abot\AutoMapper.dll</HintPath>
-    </Reference>
-    <Reference Include="CsQuery">
-      <HintPath>..\..\ThirdParties\Abot\CsQuery.dll</HintPath>
-    </Reference>
-    <Reference Include="HtmlAgilityPack">
-      <HintPath>..\..\ThirdParties\Abot\HtmlAgilityPack.dll</HintPath>
-    </Reference>
-    <Reference Include="log4net">
-      <HintPath>..\..\ThirdParties\Abot\log4net.dll</HintPath>
-    </Reference>
-    <Reference Include="Robots">
-      <HintPath>..\..\ThirdParties\Abot\Robots.dll</HintPath>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -59,21 +48,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="DictionaryExtentions.cs" />
+    <Compile Include="IEnumebarleExtention.cs" />
+    <Compile Include="JsonHelper.cs" />
+    <Compile Include="QueryStringBuilder.cs" />
+    <Compile Include="SiExtentions.cs" />
+    <Compile Include="StringExtentions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BaseAPI\BaseAPI.csproj">
-      <Project>{bcc0a748-0d5b-4f45-b32f-c2f9ca49f08b}</Project>
-      <Name>BaseAPI</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\YandexAPI\YandexAPI.csproj">
-      <Project>{fe5acbaf-ebe6-4c34-995d-4dd30a83cc60}</Project>
-      <Name>YandexAPI</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
